# bustubx

./: .gitignore  Cargo.toml  LICENSE  README.md  README_EN.md
.github/workflows/: ci.yml
bustubx/: Cargo.toml
bustubx-cli/: Cargo.toml
bustubx-cli/src/: main.rs
bustubx/src/: database.rs  error.rs  lib.rs
bustubx/src/buffer/: buffer_pool.rs  mod.rs  page.rs  replacer.rs
bustubx/src/catalog/: catalog.rs  column.rs  data_type.rs  information.rs  mod.rs  schema.rs
bustubx/src/common/: bitmap.rs  config.rs  mod.rs  rid.rs  scalar.rs  table_ref.rs  util.rs
bustubx/src/execution/: mod.rs
bustubx/src/execution/physical_plan/: aggregate.rs  create_index.rs  create_table.rs  empty.rs  filter.rs  index_scan.rs  insert.rs  limit.rs  mod.rs  nested_loop_join.rs  project.rs  seq_scan.rs  sort.rs  update.rs  values.rs
bustubx/src/expression/: aggregate.rs  alias.rs  binary.rs  cast.rs  column.rs  literal.rs  mod.rs  util.rs
bustubx/src/expression/aggr/: avg.rs  count.rs  mod.rs
bustubx/src/function/: mod.rs
bustubx/src/function/aggregate/: avg.rs  count.rs  mod.rs
bustubx/src/optimizer/: logical_optimizer.rs  mod.rs
bustubx/src/optimizer/heuristic/: graph.rs  rule.rs
bustubx/src/optimizer/physical_plan/: create_index.rs  create_table.rs  filter.rs  insert.rs  limit.rs  nested_loop_join.rs  project.rs  sort.rs  table_scan.rs  values.rs
bustubx/src/optimizer/rule/: dummy.rs  eliminate_limit.rs  limit_project_transpose.rs  merge_limit.rs  mod.rs  push_down_limit.rs  push_limit_into_scan.rs
bustubx/src/parser/: mod.rs
bustubx/src/planner/: bind_create_table.rs  logical_plan.rs  mod.rs  order_by.rs  physical_planner.rs
bustubx/src/planner/expr/: alias.rs  binary_op.rs  column_ref.rs  constant.rs  mod.rs
bustubx/src/planner/logical_plan/: aggregate.rs  create_index.rs  create_table.rs  empty_relation.rs  filter.rs  insert.rs  join.rs  limit.rs  mod.rs  project.rs  sort.rs  table_scan.rs  update.rs  util.rs  values.rs
bustubx/src/planner/logical_plan_v2/: create_index.rs  create_table.rs  empty_relation.rs  filter.rs  insert.rs  join.rs  limit.rs  mod.rs  project.rs  sort.rs  table_scan.rs  util.rs  values.rs
bustubx/src/planner/logical_planner/: bind_expr.rs  bind_insert.rs  bind_select.rs  logical_planner.rs  mod.rs  plan_create_index.rs  plan_create_table.rs  plan_expr.rs  plan_insert.rs  plan_query.rs  plan_select.rs  plan_set_expr.rs  plan_update.rs
bustubx/src/planner/operator/: create_index.rs  create_table.rs  filter.rs  insert.rs  join.rs  mod.rs  project.rs  scan.rs  sort.rs  values.rs
bustubx/src/planner/physical_plan/: create_index.rs  create_table.rs  dummy.rs  empty.rs  filter.rs  insert.rs  limit.rs  mod.rs  nested_loop_join.rs  project.rs  seq_scan.rs  sort.rs  table_scan.rs  values.rs
bustubx/src/planner/physical_planner/: mod.rs  physical_planner.rs
bustubx/src/planner/table_ref/: base_table.rs  join.rs  mod.rs
bustubx/src/storage/: disk_manager.rs  freelist_page.rs  index.rs  index_page.rs  meta_page.rs  mod.rs  page.rs  serialize.rs  table_heap.rs  table_page.rs  tuple.rs
bustubx/src/storage/codec/: common.rs  freelist_page.rs  index_page.rs  meta_page.rs  mod.rs  scalar.rs  table_page.rs  tuple.rs
bustubx/src/storage/page/: freelist_page.rs  index_page.rs  meta_page.rs  mod.rs  table_page.rs
bustubx/src/transaction/: lock_manager.rs  mod.rs  transaction.rs  transaction_manager.rs
docs/: bustubx-architecture.drawio  tinysql-architecture.drawio
src/: database.rs  error.rs  lib.rs  main.rs
src/binder/: bind_create_index.rs  bind_create_table.rs  bind_insert.rs  bind_select.rs  mod.rs  order_by.rs
src/buffer/: buffer_pool.rs  buffer_pool_manager.rs  (+2 more)
(+150 files in other folders)
