[workspace]
members = [
    "bustubx",
    "bustubx-cli",
    "tests/sqllogictest",
]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.2"
edition = "2021"
authors = ["lewiszlw <lewiszlw520@gmail.com>"]
description = "A simple relational database written in Rust"
keywords = ["SQL", "database"]
license = "MIT"
repository = "https://github.com/systemxlabs/bustubx"
homepage = "https://github.com/apache/arrow-datafusion"