[package]
name = "bustubx-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bustubx = { path = "../bustubx" }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-chrome = "0.7.1"
rustyline = "13.0.0"