[package]
name = "bustubx-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bustubx = { path = "../bustubx" }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-chrome = "0.7.1"
rustyline = "13.0.0"