[package]
name = "bustubx-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bustubx = { path = "../bustubx" }
log = "0.4.19"
env_logger = "0.10.0"
rustyline = "13.0.0"