[package]
name = "bustubx"
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["lewiszlw <lewiszlw520@gmail.com>"]
description = "A simple relational database written in Rust"
keywords = ["SQL", "database"]
license = "MIT"
repository = "https://github.com/systemxlabs/bustubx"

[lib]
doctest = false

[dependencies]
sqlparser = "0.34.0"
petgraph = "0.6.3"
lazy_static = "1.4.0"
itertools = "0.11.0"
comfy-table = "7.0.1"
derive-new = "0.5.9"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-chrome = "0.7.1"
thiserror = "1.0.56"
tempfile = "3"
derive-with = "0.5.0"