[package]
name = "bustubx"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../README.md"

[lib]
doctest = false

[dependencies]
sqlparser = "0.34.0"
itertools = "0.11.0"
comfy-table = "7.0.1"
derive-new = "0.5.9"
log = "0.4.19"
thiserror = "1.0.56"
tempfile = "3"
derive-with = "0.5.0"
strum = { version = "0.26", features = ["derive"]}
dashmap = "5.5.3"